kfreebsd-10 (10.0~svn227875-2) UNRELEASED; urgency=low

  * Use major number for kfreebsd.gz in kernel-image, so that it can be
    installed alongside other kfreebsd versions.
  * 108_teken_utf8_table.diff: Fix sockets over nullfs.

 -- Robert Millan <rmh@debian.org>  Sat, 03 Dec 2011 17:36:20 +0100

kfreebsd-10 (10.0~svn227875-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Mark kfreebsd-headers-@version@-@abiname@ as kfreebsd-any.
  * Depend on package providing devd.
  * Fix installability problem on non-kfreebsd platforms.
  * Rewrite 107_mount_update.diff to fix the new problem with same symptoms
    (this time, a regression introduced by upstream rev 220937).
    (Closes: #646957)
  * Add comment placeholder in kernel-wedge empty files.

 -- Robert Millan <rmh@debian.org>  Wed, 23 Nov 2011 21:05:12 +0100

kfreebsd-10 (10.0~svn227111-2) experimental; urgency=low

  * Fix i386 udeb flavor (should be -486, not -xen).

 -- Robert Millan <rmh@debian.org>  Sun, 06 Nov 2011 12:45:28 +0100

kfreebsd-10 (10.0~svn227111-1) experimental; urgency=low

  * New upstream snapshot.
    - 005_linux_cflags.diff: Remove (merged).
    - 108_teken_utf8_table.diff: Remove (merged).

  [ Robert Millan ]
  * Replace sed kludge with a pair of patches (920_linux_cflags.diff and
    008_verioned_freebsd_macro.diff).
  * Remove gen-ld-u-options / 020_linker.diff kludge, not needed since
    upstream fixed this (r215137).
  * Build udebs for the installer.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Nov 2011 00:11:08 +0100

kfreebsd-10 (10.0~svn226872-2) experimental; urgency=low

  * Require ZFS v28 userland (Breaks: zfsutils (<< 8.3~)).
  * Recover 918_delete_key.diff patch from r3199.  (Closes: #605065)

 -- Robert Millan <rmh@debian.org>  Sat, 29 Oct 2011 22:23:38 +0200

kfreebsd-10 (10.0~svn226872-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Remove /boot symlink kludge.  See: