@@ -3,8 +3,9 @@ kfreebsd-10 (10.0~svn227875-2) UNRELEASED; urgency=low
   * Use major number for kfreebsd.gz in kernel-image, so that it can be
     installed alongside other kfreebsd versions.
   * 108_teken_utf8_table.diff: Fix sockets over nullfs.
+  * Fix dh_clean call in udeb target.
 
- -- Robert Millan <rmh@debian.org>  Sat, 03 Dec 2011 17:36:20 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 03 Dec 2011 20:54:06 +0100
 
 kfreebsd-10 (10.0~svn227875-1) experimental; urgency=low
 
